--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1729,107 +1729,107 @@ stories:
   domain: http://www.memphisflyer.com/
   link: https://www.memphisflyer.com/HungryMemphis/archives/2019/12/29/sushi-jimmi-joins-saltwater-crab
 images:
-- name: christianity-christianity-under-construction-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-umberto-bocc.jpg
-- name: supreme-court-supremecourt-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-plentiful.jpg
-- name: gears-4882162452-fa3126b38d-b-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purp-paper.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-graham-sutherland.jpg
-- name: blossombar-purple-storm-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-00-00.jpg
-- name: locked-up-steam-lock-up-steam-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-clean-view.jpg
-- name: rain-princess-IMG_8336.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8336.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-brush.jpg
-- name: containership-bw-storytelling-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-blue-circuit.png
-- name: amusement-park-amusement-park-2-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-china-prop.jpg
-- name: server-cloud-server-racks-door-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-china-prop.jpg
-- name: castle-wall-DSC-0067-wols.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-wols.JPG
-- name: downtown-los-angeles-downtown-la-purple-pond.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-purple-pond.JPG
-- name: bordercrossing-bordercrossing-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-ww2-color.jpg
-- name: stalin-time-down-side-street-shop-sign.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-down-side-street-shop-sign.jpg
-- name: old-granary-field-granaryfield-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-far-away.jpg
-- name: white-house-lawn-white-house-window.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window.jpg
-- name: legal-statue-legalstatue-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-smooth-ride.jpg
-- name: white-house-whitehouse-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dry-skin.jpg
-- name: liberty-back-statue-liberty-back-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dry-skin.jpg
-- name: aws-s3-stories-internet-gauages-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-internet-gauages-3.jpg
-- name: white-house-whitehouse-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-satan-red.jpg
-- name: braceros-domingo-ulloa-statue-of-liberty_35910144944_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-statue-of-liberty_35910144944_o.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
-- name: powerlines-power-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dry-skin.jpg
-- name: school-clouds-church-clouds-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-horiz-circuit.jpg
-- name: stalin-time-dark-city-buildings.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dark-city-buildings.jpg
-- name: death-valley-death-valley-national-park-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-rain.jpg
-- name: la-muse-docks-big-cosco-ship.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-docks-big-cosco-ship.jpg
-- name: old-church-oldchurch-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-matrix.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
-- name: old-door-lock-old-door-lock-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-gred-mash.jpg
-- name: oldcabin-oldcabin-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-sunday.jpg
-- name: nazi-invasion-old-barn-falling-over.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-barn-falling-over.jpg
-- name: status-berlin-status-berlin-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-jap-wav-pr.jpg
-- name: locked-up-steam-lock-up-steam-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-green-zuma.jpg
-- name: powerlines-power-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-sand-paper.jpg
-- name: aws-s3-stories-new-52-175-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-52-175-800-500-0-max-0-1--1.jpg
-- name: old-church-oldchurch-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-sunday.jpg
-- name: oldsmallboat-oldsmallboat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat.jpg
-- name: store-on-corner-store-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-cinnamon-rolls.jpg
-- name: server-cloud-server-racks-clouds-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-far-away.jpg
-- name: catacombs-catacombs-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-plentiful.jpg
-- name: border-fence-border-fence-on-hill-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-monet-one.jpg
-- name: oldhousecars-house-old-cars-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-gred-mash.jpg
-- name: mediterranean-mediterranean-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dali-three.jpg
-- name: hollywood-building-hollywood-building-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purp-paper.jpg
-- name: aws-s3-square-schoolhouse-dark-dali-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-schoolhouse-dark-dali-square.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-cinnamon-rolls.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-cinnamon-rolls.JPG
-- name: adam-smith-adam-smith-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-yellow-paper.jpg
-- name: server-cloud-server-racks-clouds-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kand-two.jpg
+- name: windowmountain-window-mountain-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-emily-carr.jpg
+- name: lincoln-memorial-lincolnmemorial-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-neo-instinct.jpg
+- name: fence-mexico-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colored-circuits.jpg
+- name: school-clouds-church-clouds-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-granite.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-purple-pond.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purple-pond.png
+- name: downtown-la-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-light-dali.jpg
+- name: server-cloud-server-racks-clouds-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crunch-paper.jpg
+- name: beach-rocks-beach-rocks-currents-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-space-pizza.jpg
+- name: ellis-island-ellis-island-room-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-ww2-color.jpg
+- name: rain-princess-british-sgtreet-phone-booth.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-british-sgtreet-phone-booth.jpg
+- name: border-crossing-bordercrossing-sand-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-sand-paper.png
+- name: dragon-desert-desert-dragon-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-plentiful.jpg
+- name: white-house-lawn-white-house-lawn-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-emily-carr.jpg
+- name: lincoln-memorial-lincolnmemorial-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dali-two.jpg
+- name: beach-rocks-beach-rocks-currents-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-bright-sand.jpg
+- name: adam-smith-adam-smith-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kandinsky-bv.jpg
+- name: art-museum-art-museum-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-deep-connections.jpg
+- name: beach-clouds-lifeguard-beachclouds-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-deep-connections.jpg
+- name: border-fence-border-fence-on-hill-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-purple-storm.jpg
+- name: old-church-oldchurch-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-colorful-blocks.jpg
+- name: status-berlin-status-berlin-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-propaganda-leaflets.jpg
+- name: catacombs-catacombs-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-jap-dys-1.jpg
+- name: downtown-la-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-copper-circuit.JPG
+- name: copper-circuit-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-container-several-colors-grey.jpg
+- name: store-on-corner-store-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-missle.jpg
+- name: server-cloud-server-racks-clouds-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-diego-rivera1.jpg
+- name: status-berlin-status-berlin-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-china-prop.jpg
+- name: containership-containership-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-aqua.jpg
+- name: border-crossing-bordercrossing-blue-electricity.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-electricity.png
+- name: containership-containership-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-marcel-duchamp.jpg
+- name: hollywood-building-hollywood-building-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-soul.jpg
+- name: docks-docks-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-nazi-poster.jpg
+- name: power-lines-power-lines-empty-space-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-matrix.jpg
+- name: curtain-curtain-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-wols.jpg
+- name: white-house-whitehouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-light-dali.jpg
+- name: bf-skinner-statue-playing-instrument.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-playing-instrument.jpg
+- name: ellis-island-ellis-island-room-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-clean-view.jpg
+- name: paris-paris-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-sand-paper.jpg
+- name: oldcabin-oldcabin-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dali-three.jpg
+- name: carry-load-carryload-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purp-paper.jpg
+- name: bluelake-gred-mash-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-38-67.jpg
+- name: ellis-island-ellis-island-room-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-ww2-dresden.jpg
+- name: curtain-curtain-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-kand-two.jpg
+- name: supreme-court-supremecourt-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-green-zuma.jpg
+- name: cargo-ship-cargo-ship-on-sea-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-light-dali.jpg
+- name: oldbarn-oldbarn-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dry-skin.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-propaganda-leaflets.jpg
+- name: birdhouse-birdhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-granite.jpg
+- name: blossombar-space-pizza-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-24-99.jpg
+- name: oldhouse-oldhouse-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-monet-one.jpg
 ---
 YouTube Series Highlights Pittsburgh's Neighborhoods, Big And Small.&nbsp;Former Norman Police Chief Don Holyfield Dies.&nbsp;Auburn, Angola Appear On New Tourism List.&nbsp;Illinois Sees First Legal Sales Of Recreational Marijuana.&nbsp;Mexico City Plastic Bag Ban To Take Residents Back In Time.&nbsp;Have A Resolution For The New Year? Here Are The Most Popular Ones.&nbsp;Parks Restrict Climbing Routes To Protect Wildlife.&nbsp;Funeral Set For Slain Panola County Deputy.&nbsp;
